--- a/sticky.html
+++ b/sticky.html
@@ -13,6 +13,7 @@
 
 <body style="background-color: black;">
     <div class="grey">
+        <h4 class="left-txt">이것은 고정되는 글씨</h4>
         <img class="sticky" src="images/iphone1.png" alt="iphone">
     </div>
 </body>
