--- a/typewriting.html
+++ b/typewriting.html
@@ -34,7 +34,7 @@
         // }, 1500);
         for(let i = 0; i < origin.length; i++) {
           setTimeout(function() {
-            // origin_h1.innerHTML += origin[i];
+            origin_h1.innerHTML += origin[i];
           }, 500 + (500 * i));
         }
       });
