es6 basic, this, variable

--- a/es6/basic.html
+++ b/es6/basic.html
@@ -12,7 +12,7 @@
 
   <script>
     document.querySelector('#button').addEventListener('click', function() {
-      abc('바보');
+      abc('hello world');
     });
 
     // var, let, const
